# spark-static-stream-job

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
config/: log4j2.properties
config/kafka/: log4j.properties
config/spark/: log4j2.properties
config/supervisor/: producer.conf
docker/generator/: Dockerfile
docker/kafka/: Dockerfile
docker/producer/: Dockerfile
docker/spark/: Dockerfile
generator/: __init__.py  run.sh
jobs/: collect-streaming-query.py  generate-adv-campaign-data.py  produce_data.py  static.py  stream.py  test-job.py  test.py
producer/: __init__.py  produce-data.py  run.sh
producer/adv-campaign/: __init__.py  run.sh
producer/clients-locations/: __init__.py  run.sh
spark/: run-job.sh  run.sh
src/: main.py
src/generator/: __init__.py  generator.py
src/logger/: __init__.py  logger.py
src/producer/: __init__.py  producer.py  t.py
src/spark/: __init__.py  collector.py  generator.py  main.py  spark.py  stream.py
tests/: test.py
tests/docker/: run-kafka.sh  run-producer.sh
tests/docker/kafka/: run.sh
tests/docker/producer/: run.sh
tests/kafkacat/: start-consumer.sh  start-producer.sh
utils/: rm-images.sh  rm-pods.sh  run-producer.sh  run-streaming-job.sh  start-consumer.sh  start-producer.sh
utils/docker/kafka/: describe-topic.sh  list-topics.sh
utils/kafka/: create-topic.sh
utils/python/: build.sh
utils/yandex-cloud/: cloud-config.yaml  configure-host.sh  create-host.py  create-working-host.sh
