[tool.poetry]
name = "spark-static-stream-job"
version = "0.1.0"
repository = "https://github.com/leonidee/spark-static-stream-job"
description = ""
authors = ["Grishenkov Leonid <grishenkovleonid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.generator.dependencies]
s3fs = "2023.6.0"
pandas = "2.0.3"
pyarrow = "12.0.1"
pyyaml = "6.0"
python-dotenv = "1.0.0"

[tool.poetry.group.producer.dependencies]
kafka-python = "2.0.2"
s3fs = "2023.6.0"
pandas = "2.0.3"
pyarrow = "12.0.1"
pyyaml = "6.0"
python-dotenv = "1.0.0"

[tool.poetry.group.spark.dependencies]
pyyaml = "6.0"
python-dotenv = "1.0.0"
findspark = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
